tests/baselines/reference/namedTupleMembersErrors.errors.txt
tests/cases/conformance/types/tuple/named/namedTupleMembersErrors.ts(14,52): error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string[] | undefined'?
tests/cases/conformance/types/tuple/named/namedTupleMembersErrors.ts(18,44): error TS2574: A rest element type must be an array type.
tests/cases/conformance/types/tuple/named/namedTupleMembersErrors.ts(20,13): error TS2456: Type alias 'RecusiveRestUnlabeled' circularly references itself.
tests/cases/conformance/types/tuple/named/namedTupleMembersErrors.ts(21,13): error TS2456: Type alias 'RecusiveRest' circularly references itself.


==== tests/cases/conformance/types/tuple/named/namedTupleMembersErrors.ts (4 errors) ====
    export type Segment1 = [length: number, number]; // partially named, disallowed
    export type Segment2 = [number, size: number]; // partially named, disallowed
    
    export type List = [item: any, ...any];  // partially named, disallowed
    export type List2 = [any, ...remainder: any];  // partially named, disallowed
    
    export type Pair = [item: any, any?];  // partially named, disallowed
    export type Pair2 = [any, last?: any];  // partially named, disallowed
    
    export type Opt = [element: string?]; // question mark on element disallowed
    
    export type Trailing = [first: string, rest: ...string[]]; // dots on element disallowed
    
    export type OptTrailing = [first: string, rest: ...string[]?]; // dots+question on element disallowed
                                                       ~~~~~~~~~
!!! error TS17019: Adding a postfix '?' to the end of a type is not valid TypeScript syntax. Did you mean to write 'string[] | undefined'?
    
    export type OptRest = [first: string, ...rest?: string[]]; // rest+optional disallowed
    
    export type NonArrayRest = [first: string, ...rest: number]; // non-arraylike rest, disallowed
                                               ~~~~~~~~~~~~~~~
!!! error TS2574: A rest element type must be an array type.
    
    export type RecusiveRestUnlabeled = [string, ...RecusiveRestUnlabeled];
                ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2456: Type alias 'RecusiveRestUnlabeled' circularly references itself.
    export type RecusiveRest = [first: string, ...rest: RecusiveRest]; // marked as incorrect, same as above
                ~~~~~~~~~~~~
!!! error TS2456: Type alias 'RecusiveRest' circularly references itself.
    